Cleanup of python timelapse scripts.

--- a/prettyvis.ipynb
+++ b/prettyvis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,51 +106,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(allfiles)): # CAREFUL!!! This launches a few thousand processes!\n",
-    "    # Do only if you have 10ish GB of RAM free.\n",
-    "    # Really, this is not a smart thing to do,\n",
-    "    # and there are better solutions if you will\n",
-    "    # do this more than once.\n",
+    "for i in range(len(allfiles)):\n",
     "    os.system(\"inkscape -z -e prettyvis/front_%05d.png --export-area-drawing --export-dpi=300 prettyvis/front_%05d.svg\"%(i,i))\n",
     "    os.system(\"inkscape -z -e prettyvis/back_%05d.png --export-area-drawing --export-dpi=300 prettyvis/back_%05d.svg\"%(i,i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(allfiles)): # CAREFUL!!! This launches a few thousand processes!\n",
-    "    # Do only if you have 10ish GB of RAM free.\n",
-    "    # Really, this is not a smart thing to do,\n",
-    "    # and there are better solutions if you will\n",
-    "    # do this more than once.\n",
-    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/back_%05d.png &\"%(i))\n",
-    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/front_%05d.png &\"%(i))"
+    "for i in range(len(allfiles)):\n",
+    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/back_%05d.png\"%(i))\n",
+    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/front_%05d.png\"%(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(allfiles)): # CAREFUL!!! This launches a few thousand processes!\n",
-    "    # Do only if you have 10ish GB of RAM free.\n",
-    "    # Really, this is not a smart thing to do,\n",
-    "    # and there are better solutions if you will\n",
-    "    # do this more than once.\n",
-    "    os.system(\"montage prettyvis/*_%05d.png[1180x1180] -geometry +40+40 -tile 2x1 prettyvis/mon_%05d.png &\"%(i,i))"
+    "for i in range(len(allfiles)):\n",
+    "    os.system(\"montage prettyvis/*_%05d.png[1180x1180] -geometry +40+40 -tile 2x1 prettyvis/mon_%05d.png\"%(i,i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ffmpeg -y -framerate 250 -pattern_type glob -i \"prettyvis/fast/mon*.png\" -c:v libx264 -r 30 -pix_fmt yuv420p prettyvis/2.mp4"
+    "# !ffmpeg -y -framerate 250 -pattern_type glob -i \"prettyvis/fast/mon*.png\" -c:v libx264 -r 30 -pix_fmt yuv420p prettyvis/2.mp4"
    ]
   },
   {
@@ -190,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,52 +195,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for n in allbadns:\n",
-    "    os.system(\"inkscape -z -e prettyvis/tmp/front_%s.png --export-area-drawing --export-dpi=300 prettyvis/tmp/front_%s.svg &\"%(n,n))\n",
-    "    os.system(\"inkscape -z -e prettyvis/tmp/back_%s.png --export-area-drawing --export-dpi=300 prettyvis/tmp/back_%s.svg &\"%(n,n))"
+    "    os.system(\"inkscape -z -e prettyvis/tmp/front_%s.png --export-area-drawing --export-dpi=300 prettyvis/tmp/front_%s.svg\"%(n,n))\n",
+    "    os.system(\"inkscape -z -e prettyvis/tmp/back_%s.png --export-area-drawing --export-dpi=300 prettyvis/tmp/back_%s.svg\"%(n,n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for n in allbadns:\n",
-    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/tmp/back_%s.png &\"%(n))\n",
-    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/tmp/front_%s.png &\"%(n))"
+    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/tmp/back_%s.png\"%(n))\n",
+    "    os.system(\"mogrify -fuzz 30%% -fill purple -opaque black prettyvis/tmp/front_%s.png\"%(n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for n in allbadns:\n",
-    "    os.system(\"montage prettyvis/tmp/*_%s.png[1180x1180] -geometry +40+40 -tile 2x1 prettyvis/mon_%s.png &\"%(n,n))"
+    "    os.system(\"montage prettyvis/tmp/*_%s.png[1180x1180] -geometry +40+40 -tile 2x1 prettyvis/mon_%s.png\"%(n,n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system(\"mv prettyvis/mon_* prettyvis/fast\")"
    ]
@@ -266,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
